feat: 新增获取用户管理的集体名称接口 	完善api文档 	完善数据库结构
